fix: bug with no visibility of #contact headers probably fixed (animate on scroll removed) - iphone

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -51,9 +51,9 @@
 
 .right-col {
   margin: 20px;
-  // @include media ("<=tablet") {
-
-  // }
+  @include media("<=tablet") {
+    width: 95vw;
+  }
   @include media(">tablet") {
     width: 35vw;
   }
